# causalgraph

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.pipeline  README.md  config.yaml  pipeline.yaml  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: publish.yml
api/: Dockerfile.prod  db.py  dependencies.py  main.py  models.py  requirements.txt
api/routers/: analyze.py  clusters.py  graph.py  posts.py
docs/: architecture.md  extending.md  getting-started.md  graphformat.md
frontend/: .env.example  Dockerfile.prod  docker-entrypoint.sh  index.html  lighttpd.conf.template  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  types.ts  vite-env.d.ts
pipeline/: Dockerfile.prod  db.py  parquet_reader.py  protocols.py  registry.py  requirements.txt  runner.py  server.py
pipeline/step1_detection/: llm_detector.py  regex_detector.py  transformer_detector.py  zero_shot_detector.py
pipeline/step1_identification/: llm_identifier.py  regex_identifier.py  zero_shot_identifier.py
pipeline/step2_extraction/: llm_extractor.py  regex_spacy_extractor.py  transformer_extractor.py
pipeline/step3_canonization/: llm_canonizer.py  parsing_canonizer.py  passthrough_canonizer.py  transformer_canonizer.py
pipeline/step3_hierarchy/: embedding_clusterer.py  embedding_ward_clusterer.py  tfidf_clusterer.py
scripts/: inspect_parquet.py  run_pipeline.py
tests/: conftest.py  test_api.py  test_db.py  test_step1_regex.py  test_step2_extractor.py  test_step3_canonization.py  test_step3_embedding_ward.py
(+20 files in other folders)
